all main page 1200px done

--- a/less/fonts.less
+++ b/less/fonts.less
@@ -18,3 +18,10 @@
 	url("../fonts/SFUIDisplay-Bold.eot?#iefix") format("embedded-opentype"),
 	url(../fonts/SFUIDisplay-Bold.woff) format('woff');
 }
+
+@font-face {
+	font-family: SFUIMedium;
+	src:url(../fonts/SFUIDisplay-Medium.ttf),
+	url("../fonts/SFUIDisplay-Medium.eot?#iefix") format("embedded-opentype"),
+	url(../fonts/SFUIDisplay-Medium.woff) format('woff');
+}
