--- a/less/header.less
+++ b/less/header.less
@@ -14,7 +14,8 @@
 		padding: 15px 30px;
 		margin-right: 10px;
 		background-color: #ed383f;
-		transition: 0.3s;
+		transition: 0.1s;
+		font-size: 16px;
 
 		&:hover {
 			background-color: #de3137;
@@ -24,7 +25,8 @@
 	&__second-button {
 		padding: 15px 30px;
 		background-color: #5da972;
-		transition: 0.3s;
+		transition: 0.1s;
+		font-size: 16px;
 
 		&:hover {
 			background-color: #589f6c;
