--- a/less/style.less
+++ b/less/style.less
@@ -3,3 +3,11 @@
 @import "main.less";
 @import "header.less";
 @import "slider.less";
+@import "tabs.less";
+@import "jackpot.less";
+@import "last-winners.less";
+@import "popular-games.less";
+@import "deposites.less";
+@import "games.less";
+@import "partners.less";
+@import "footer.less";
