--- a/less/main.less
+++ b/less/main.less
@@ -8,6 +8,7 @@ body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	background-repeat: no-repeat;
 }
 
 a {
@@ -18,8 +19,8 @@ a {
 button {
 	border: none;
 	color: #fff;
-	font-size: 16px;
 	cursor: pointer;
+	outline: none;
 }
 
 .clearfix {
