--- a/less/slider.less
+++ b/less/slider.less
@@ -1,4 +1,5 @@
 .slider {
+	margin-bottom: -4px;
 
 	&__button {
 		position: absolute;
@@ -59,7 +60,8 @@
 	&__button {
 		padding: 25px 40px;
 		background-color: #ed383f;
-		transition: 0.3s;
+		font-size: 16px;
+		transition: 0.1s;
 
 		&:hover {
 			background-color: #ec262e;
