--- a/css/style.css
+++ b/css/style.css
@@ -87,24 +87,14 @@ button {
   display: inline-block;
   margin-right: 45px;
 }
+.main-nav__item a {
+  transition: 0.1s;
+}
+.main-nav__item a:hover {
+  color: #ececec;
+}
 .slider {
   margin-bottom: -4px;
-}
-.slider__button {
-  position: absolute;
-  top: calc(50% - 50px);
-  left: 50%;
-  width: 35px;
-  height: 35px;
-  border-top: 3px solid #fff;
-  border-right: 3px solid #fff;
-  cursor: pointer;
-}
-.slider__button--left {
-  transform: translatex(-590px) rotate(-135deg);
-}
-.slider__button--right {
-  transform: translatex(560px) rotate(45deg);
 }
 .slide {
   position: relative;
@@ -213,6 +203,12 @@ button {
 .switchers__switcher:hover .switchers__image {
   background-image: url('../img/sprite-hover.png');
 }
+.switchers__switcher--active {
+  background-color: #ed383f;
+}
+.switchers__switcher--active .switchers__image {
+  background-image: url('../img/sprite-hover.png');
+}
 .switchers__image {
   position: absolute;
   top: 22px;
@@ -234,7 +230,7 @@ button {
   background-position: -222px 0;
 }
 .tab {
-  display: flex;
+  display: none;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
@@ -266,6 +262,9 @@ button {
   height: 160px;
   background-color: #313131;
   margin-bottom: 20px;
+}
+.tab--active {
+  display: flex;
 }
 .jackpot__wrapper {
   padding-top: 200px;
@@ -393,13 +392,13 @@ button {
 .popular-games__button:hover {
   background-color: #67b37c;
 }
-.popular-games__preview-wrapper {
+.games-preview {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
 }
-.popular-games__preview {
+.games-preview__item {
   width: 285px;
   height: 155px;
   margin-bottom: 20px;
@@ -506,15 +505,20 @@ button {
   justify-content: space-between;
   width: 1200px;
   margin: 0 auto;
-  padding: 5px 0;
+  padding: 10px 0;
 }
 .footer__copyright {
   font-size: 13px;
   line-height: 28px;
   color: #b0b0b0;
 }
+.footer__development {
+  display: flex;
+  align-items: center;
+}
 .footer__developer {
-  vertical-align: middle;
+  margin-top: 10px;
+  margin-right: 10px;
   font-size: 12px;
   color: #666666;
 }
