--- a/less/header.less
+++ b/less/header.less
@@ -53,5 +53,13 @@
 	&__item {
 		display: inline-block;
 		margin-right: 45px;
+
+		a {
+		transition: 0.1s;
+
+			&:hover {
+				color: #ececec;
+			}
+		}
 	}
 }
