--- a/less/popular-games.less
+++ b/less/popular-games.less
@@ -25,15 +25,15 @@
 			background-color: #67b37c;
 		}
 	}
+}
 
-	&__preview-wrapper {
-		display: flex;
-		justify-content: space-between;
-		flex-wrap: wrap;
-		width: 100%;
-	}
+.games-preview {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	width: 100%;
 
-	&__preview {
+	&__item {
 		width: 285px;
 		height: 155px;
 		margin-bottom: 20px;
