--- a/less/footer.less
+++ b/less/footer.less
@@ -6,7 +6,7 @@
 		justify-content: space-between;
 		width: 1200px;
 		margin: 0 auto;
-		padding: 5px 0;
+		padding: 10px 0;
 	}
 
 	&__copyright {
@@ -15,8 +15,14 @@
 		color: #b0b0b0;
 	}
 
+	&__development {
+		display: flex;
+		align-items: center;
+	}
+
 	&__developer {
-		vertical-align: middle;
+		margin-top: 10px;
+		margin-right: 10px;
 		font-size: 12px;
 		color: #666666;
 	}
