--- a/less/footer.less
+++ b/less/footer.less
@@ -7,6 +7,14 @@
 		width: 1200px;
 		margin: 0 auto;
 		padding: 10px 0;
+
+		@media @tablet {
+			width: 768px;
+		}
+
+		@media @mobile {
+			.mobile-wrap;
+		}
 	}
 
 	&__copyright {
