--- a/less/main.less
+++ b/less/main.less
@@ -28,3 +28,8 @@ button {
 	display: block;
 	clear: both;
 }
+
+.viking-background {
+	background-image: url('../img/bg-viking.png');
+	background-position: bottom;
+}
