--- a/less/partners.less
+++ b/less/partners.less
@@ -15,6 +15,16 @@
 		margin: 0 auto;
 		padding: 180px 0;
 		background-image: url('../img/partners.png');
+		background-size: 100% auto;
 		background-position: center;
+
+		@media @tablet {
+			width: 768px;
+			padding: 100px 0;
+		}
+
+		@media @mobile {
+			.mobile-wrap;
+		}
 	}
 }
