--- a/less/popular-games.less
+++ b/less/popular-games.less
@@ -7,6 +7,14 @@
 		align-items: center;
 		width: 1200px;
 		margin: 0 auto;
+
+		@media @tablet {
+			width: 768px;
+		}
+
+		@media @mobile {
+			.mobile-wrap;
+		}
 	}
 
 	&__header {
@@ -34,9 +42,34 @@
 	width: 100%;
 
 	&__item {
-		width: 285px;
+		width: ~"calc(25% - 15px)";
 		height: 155px;
 		margin-bottom: 20px;
 		background-color: #313131;
+
+		&:last-of-type {
+			display: none;
+		}
+
+		@media @tablet {
+			width: ~"calc(33.33% - 12px)";
+
+			&:last-of-type {
+				display: inline-block;
+			}
+		}
+
+		@media @mobile {
+			width: 100%;
+
+			&:nth-of-type(4),
+			&:nth-of-type(5),
+			&:nth-of-type(6),
+			&:nth-of-type(7),
+			&:nth-of-type(8),
+			&:nth-of-type(9) {
+				display: none;
+			}
+		}
 	}
 }
