--- a/less/variables.less
+++ b/less/variables.less
@@ -1,1 +1,8 @@
-@mobile: ~ "(max-width: 1200px)";
+@tablet: ~ "(max-width: 1200px)";
+@mobile: ~ "(max-width: 768px)";
+
+.mobile-wrap {
+	width: 100%;
+	padding-right: 10px;
+	padding-left: 10px;
+}
