--- a/less/slider.less
+++ b/less/slider.less
@@ -1,5 +1,5 @@
 .slider {
-	margin-bottom: -4px;
+	
 }
 
 .slide {
@@ -7,28 +7,64 @@
 
 	&__image-wrapper {
 		width: 100%;
+		height: 500px;
+		background-image: url('../img/slide-image.png');
+
+		@media @tablet {
+			height: 400px;
+			background-size: auto 100%;
+			background-position: center;
+		}
+
+		@media @mobile {
+		}
 	}
 
 	&__image {
 		width: 100%;
+
+		@media @mobile {
+			height: 400px;
+		}
 	}
 
 	&__wrapper {
 		width: 1200px;
 		margin: 0 auto;
+
+		@media @tablet {
+			width: 768px;
+		}
+
+		@media @mobile {
+			.mobile-wrap;
+		}
 	}
 
 	&__text {
 		position: absolute;
 		top: 50%;
 		left: 50%;
+		width: 500px;
 		transform: translatey(-50%);
+
+		@media @tablet {
+			width: 300px;
+		}
+
+		@media @mobile {
+			width: ~"calc(50% - 20px)";
+		}
 	}
 
 	&__upper-text {
 		display: block;
 		margin-bottom: 20px;
 		font-size: 30px;
+
+		@media @tablet {
+			font-size: 25px;
+		}
 	}
 
 	&__header {
@@ -36,6 +72,14 @@
 		font-family: SFUIBold;
 		font-size: 60px;
 		text-transform: uppercase;
+
+		@media @tablet {
+			font-size: 40px;
+		}
+
+		@media @mobile {
+			font-size: 30px;
+		}
 	}
 
 	&__button {
@@ -46,6 +90,10 @@
 
 		&:hover {
 			background-color: #ec262e;
+		}
+
+		@media @mobile {
+			padding: 10px 15px;
 		}
 	}
 }
