--- a/less/tabs.less
+++ b/less/tabs.less
@@ -8,6 +8,10 @@
 		width: 100%;
 		height: 1px;
 		background-color: #3d3d3d;
+
+		@media @mobile {
+			display: none;
+		}
 	}
 
 	&__wrapper {
@@ -16,6 +20,14 @@
 		justify-content: space-between;
 		width: 1200px;
 		margin: 0 auto;
+
+		@media @tablet {
+			width: 768px;
+		}
+
+		@media @mobile {
+			.mobile-wrap;
+		}
 	}
 
 	&__selector {
@@ -53,6 +65,7 @@
 }
 
 .switchers {
+	position: relative;
 
 	&__switcher {
 		position: relative;
@@ -82,8 +95,8 @@
 		background-color: #ed383f;
 
 		.switchers__image {
-				background-image: url('../img/sprite-hover.png');
-			}
+			background-image: url('../img/sprite-hover.png');
+		}
 	}
 
 	&__image {
@@ -145,10 +158,35 @@
 	}
 
 	&__variant {
-		width: 285px;
+		width: ~"calc(25% - 15px)";
 		height: 160px;
 		background-color: #313131;
 		margin-bottom: 20px;
+
+		&:last-of-type {
+			display: none;
+		}
+
+		@media @tablet {
+			width: ~"calc(33.33% - 12px)";
+
+			&:last-of-type {
+				display: inline-block;
+			}
+		}
+
+		@media @mobile {
+			width: 100%;
+
+			&:nth-of-type(4),
+			&:nth-of-type(5),
+			&:nth-of-type(6),
+			&:nth-of-type(7),
+			&:nth-of-type(8),
+			&:nth-of-type(9) {
+				display: none;
+			}
+		}
 	}
 }
 
