--- a/less/main.less
+++ b/less/main.less
@@ -23,6 +23,10 @@ button {
 	outline: none;
 }
 
+form * {
+	outline: none;
+}
+
 .clearfix {
 	content: '';
 	display: block;
@@ -32,4 +36,8 @@ button {
 .viking-background {
 	background-image: url('../img/bg-viking.png');
 	background-position: bottom;
+}
+
+.hidden {
+	display: none;
 }
