--- a/less/slider.less
+++ b/less/slider.less
@@ -9,6 +9,15 @@
 		width: 100%;
 		height: 500px;
 		background-image: url('../img/slide-image.png');
+		background-size: cover;
+
+		@media (min-width: 1700px) {
+			height: 550px;
+		}
+
+		@media (min-width: 1700px) {
+			height: 600px;
+		}
 
 		@media @tablet {
 			height: 400px;
