--- a/less/tabs.less
+++ b/less/tabs.less
@@ -108,7 +108,7 @@
 		background-image: url('../img/sprite.png');
 	}
 
-	&__image--second {
+	&__image--first {
 		background-position: -58px 0;
 	}
 
