--- a/less/footer.less
+++ b/less/footer.less
@@ -6,6 +6,7 @@
 		justify-content: space-between;
 		width: 1200px;
 		margin: 0 auto;
+		margin-bottom: 50px;
 		padding: 10px 0;
 
 		@media @tablet {
