--- a/less/games.less
+++ b/less/games.less
@@ -15,6 +15,7 @@
 		justify-content: space-between;
 		width: 1200px;
 		margin: 0 auto;
+		margin-top: 40px;
 
 		@media @tablet {
 			width: 768px;
@@ -47,7 +48,7 @@
 		}
 	}
 
-	@media (max-width: 500px) {
+	@media (max-width: 300px) {
 		&__column {
 			width: 100%;
 		}
@@ -73,13 +74,25 @@
 	}
 
 	&__social {
-		width: 220px;
-		height: 45px;
-		background-image: url('../img/social.png');
 
 		@media @mobile {
 			margin: 0 auto;
 			margin-bottom: 30px;
 		}
+	}
+
+	&__text {
+		display: block;
+		margin-bottom: 20px;
+
+		@media @mobile {
+			text-align: center;
+		}
+	}
+
+	&__fake-social {
+		width: 220px;
+		height: 45px;
+		background-image: url('../img/social.png');
 	}
 }
